--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.1.0",
-    "react-native": "0.70.15"
+    "react-native": "0.70.15",
+    "react-native-safe-area-context": "^4.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -19,8 +20,10 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.4",
+    "prettier": "^3.2.5",
     "react-test-renderer": "18.1.0"
   },
   "jest": {
